# ricsek

./: .env  .gitignore  Cargo.toml  build.rs  config.yaml
migrations/2023-02-25-153815_first/: up.sql
migrations/2023-02-25-154755_env/: down.sql  up.sql
scripts/: visualize_mesh.py
src/: common.rs  config.rs  cuda.rs  db.rs  dynamics.rs  geometry.rs  lib.rs  main.rs  math.rs  models.rs  parameters.rs  schema.rs  state.rs  view.rs
src/common/: params.rs
src/config/: run.rs  setup.rs
src/config/setup/: agents.rs  parameters.rs
src/config/setup/parameters/: common.rs  physical.rs  simulation.rs  singularities.rs
src/cuda/: common.cu  cuda_ricsek.h  electro.cu  electro.rs  fluid.cu  fluid.rs  interface.rs  linear_fields.cu  linear_fields.h
src/db/: models.rs  schema.rs
src/dynamics/: agent.rs  boundary.rs  brownian.rs  common.rs  electro.rs  fluid.rs  obstacle.rs  segment.rs  stokes_solutions.rs
src/geometry/: capsule.rs  closest.rs  cone.rs  helix.rs  line_segment.rs  point.rs  sphere.rs
src/math/: capsule.rs  point.rs
src/numerics/: cuda_common.h  electro.cu  fluid.cu  interface.rs
src/parameters/: physical.rs  simulation.rs
src/runner/: common.rs
src/view/: common.rs  environment.rs  flow.rs  pan_orbit_camera.rs
