[package]
name = "ricsek"
version = "0.1.0"
edition = "2021"

[dependencies]
geo = { version = "0.24.*", features = ["use-serde"] }
diesel = { version = "2.0.*", features = [
  "postgres",
  "postgres_backend",
  "serde_json",
  "time",
] }
dotenvy = "0.15.*"
json = "0.12.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version = "1.0.*" }
time = "0.3.*"
bevy = "0.10.*"
physical_constants = "0.5.*"
rand = "0.8.*"
rand_distr = "0.4.*"
derive_more = "0.99.17"
nalgebra = "0.32.*"
clap = { version = "4.1.*", features = ["derive", "unicode", "wrap_help", "cargo"] }

[[bin]]
name = "initialize"

[[bin]]
name = "run"

[[bin]]
name = "view"

[[bin]]
name = "view_stokes_solutions"
