[package]
name = "ricsek"
version = "0.1.0"
edition = "2021"

[dependencies]
geo = { version = "0.26", features = ["use-serde"] }
diesel = { version = "2.0", features = [
  "postgres",
  "postgres_backend",
  "serde_json",
  "time",
] }
dotenvy = "0.15"
json = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }
time = "0.3"
bevy = { version = "0.11", features = ["glam_assert"] }
physical_constants = "0.5"
rand = "0.8"
rand_distr = "0.4"
derive_more = "0.99"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
clap = { version = "4.1", features = [
  "derive",
  "unicode",
  "wrap_help",
  "cargo",
] }
colorgrad = "0.6"
structopt = "0.3"
bevy_more_shapes = { git = "https://github.com/eddiejessup/bevy_more_shapes.git", branch = "bevy_0.11.0" }
env_logger = "0.10"
log = "0.4"
tobj = { version = "4", features = ["ahash"] }
csv = { version = "1.2" }
bevy_obj = { version = "0.11" }

[[bin]]
name = "initialize"

[[bin]]
name = "run"

[[bin]]
name = "view"

[[bin]]
name = "view_stokes_solutions"

[profile.release]
debug = 1
