[package]
name = "ricsek"
version = "0.1.0"
edition = "2021"

[features]
cuda = []

[dependencies]
geo = { version = "0.29", features = ["use-serde"] }
diesel = { version = "2.2", features = [
  "postgres",
  "postgres_backend",
  "serde_json",
  "time",
] }
dotenvy = "0.15"
json = "0.12"
serde = { version = "1.0", features = ["derive"] }
# Arbitrary precision is required to store the RNG state.
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_yaml = { version = "0.9" }
time = "0.3"
bevy = { version = "0.15", features = ["glam_assert"] }
physical_constants = "0.5"
rand = "0.8"
rand_distr = "0.4"
derive_more = "1"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
clap = { version = "4", features = ["derive", "unicode", "wrap_help", "cargo"] }
colorgrad = "0.7"
env_logger = "0.11"
log = "0.4"
tobj = { version = "4", features = ["ahash"] }
csv = { version = "1" }
bevy_obj = { version = "0.15" }
libc = "0.2"
approx = "0.5"
num-traits = "0.2.19"
rand_pcg = { version = "0.3.1", features = ["serde", "serde1"] }

[build-dependencies]
bindgen = "0.70"

[[bin]]
name = "run_sim"

[[bin]]
name = "view_sim"

[profile.release]
debug = 1
